Mon Mar 12 00:49:24 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/tests.dsw:
	* tests/Logging_Strategy_Test.dsp: Added a new dsp file.

Sun Mar 11 21:00:16 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          Print out the config.h and platform_macros.GNU files, this is
          useful when debugging builds.

Sun Mar 11 18:41:08 2001  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * ace/CDR_Stream.h: Updated a comment to clarify that the buffer()
          method just returns a pointer to the first block in the chain.
          Thanks to Johnny Willemsen for pointing this out.

Sun Mar 11 17:46:45 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/Local_Name_Space_T.cpp: Fixed a compiler error on Win32
          Unicode platforms.

Sun Mar 11 17:28:40 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

        * ace/QoS/QoS_Session_Impl.cpp (rsvp_callback): <errflags> was unused.

Sun Mar 11 08:31:05 2001  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * tests/Makefile.bor (NAMES): Added Logging_Strategy_Test.

Sun Mar 11 07:32:18 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * tests/Logging_Strategy_Test.cpp (order): Fixed a warning in g++
          builds.

Sat Mar 10 23:15:10 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_run_tests.lst:
          Fixed name of Crashed_Callback test

Sat Mar 10 19:28:30 PST 2001 Mayur Deshpande <mayur@ics.uci.edu>

        * include/makeinclude/platform_qnx_rtp_gcc.GNU:
          Fixes to enable debugging on QNX without ACE crashing.
          Thanks to Andy Olson for the suggestions.

Sat Mar 10 19:05:38 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/config-win32.h:

          Include config-win32-common.h even on Windows CE.

        * ace/config-win32-msvc-6.h:

          If ACE_ENDTHREADEX is already defined, don't define it.

        * ace/OS_Dirent.h:

          Changed the use of ACE_WINCE to ACE_HAS_WINCE.
