@@ -1157,7 +1157,7 @@ Richard Huber <rhuber@amadeus.net>
 Glen Osterhout <gosterho@elronsw.com>
 YingLi <taoace@sina.com>
 Haka <newhaka@21cn.com>
-Sam Chong <sam@i2i-inc.com> 
+Sam Chong <sam@i2i-inc.com>
 Virgilijus Globis <virgis@megagis.lt>
 Stefan Scherer <stefan_scherer@sepp.de>
 Pim Philipse <ppm@rogan-medical.com>
@@ -1174,6 +1174,7 @@ Shameek Basu <sbasu@ivast.com>
 Dipti Jain <dijain@hss.hns.com>
 Eric Zuur <Eric.Zuur@meco.nl>
 Jeffrey J. Persch <hyperslug@yahoo.com>
+Rahul Shukla <rshukla@ggn.aithent.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
